--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,13 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="#">Create New URL</a>
+          <% if (!username) { %>
+            <a class="nav-item nav-link" href="/login">Login</a>
+          <% } %>
+          <% if (username) { %>
+            <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+            <span class="nav-item nav-link">Current logged in user: <%= username %></span>
+          <% } %>
         </div>
         <form class="form-inline ml-auto" method="POST" action="/login">
             <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username">
