--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,6 +22,15 @@
           <% if (username) { %>
             <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             <span class="nav-item nav-link">Current logged in user: <%= username %></span>
+            <span class="nav-item nav-link">Logged in as: <%= username %></span>
+          <form class="form-inline ml-auto" method="POST" action="/logout">
+            <button class="btn btn-light my-2 my-sm-0" type="submit">Log Out</button>
+          </form>
+        <% } else { %>
+          <form class="form-inline ml-auto" method="POST" action="/login">
+            <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username">
+            <button class="btn btn-light my-2 my-sm-0" type="submit">Login</button>
+          </form>
           <% } %>
         </div>
         <form class="form-inline ml-auto" method="POST" action="/login">
