--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,10 +19,9 @@
           <% if (!username) { %>
             <a class="nav-item nav-link" href="/login">Login</a>
           <% } %>
-          <% if (username) { %>
+          <% if (user) { %>
             <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-            <span class="nav-item nav-link">Current logged in user: <%= username %></span>
-            <span class="nav-item nav-link">Logged in as: <%= username %></span>
+            <span class="nav-item nav-link">Logged in as: <%= user.email %></span>
           <form class="form-inline ml-auto" method="POST" action="/logout">
             <button class="btn btn-light my-2 my-sm-0" type="submit">Log Out</button>
           </form>
