--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,24 +16,20 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="#">Create New URL</a>
-          <% if (!username) { %>
+          <% if (!user) { %> <!-- Change from username to user -->
             <a class="nav-item nav-link" href="/login">Login</a>
           <% } %>
-          <% if (user) { %>
+          <% if (user) { %> <!-- Change from username to user -->
             <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
             <span class="nav-item nav-link">Logged in as: <%= user.email %></span>
-          <form class="form-inline ml-auto" method="POST" action="/logout">
-            <button class="btn btn-light my-2 my-sm-0" type="submit">Log Out</button>
-          </form>
-        <% } else { %>
+            <form class="form-inline ml-auto" method="POST" action="/logout">
+              <button class="btn btn-light my-2 my-sm-0" type="submit">Log Out</button>
+            </form>
+          <% } else { %>
             <a class="nav-item nav-link" href="/register">Register</a>
             <a class="nav-item nav-link" href="/login">Login</a>
           <% } %>
         </div>
-        <form class="form-inline ml-auto" method="POST" action="/login">
-            <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username">
-            <button class="btn btn-light my-2 my-sm-0" type="submit">Login</button>
-          </form>
       </div>
     </nav>
   </header>
