--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,7 +30,8 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
+
               <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
                 <input type="hidden" name="_method" value="DELETE">
