--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,11 +15,13 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL.longURL %></h5>
+
         <form method="POST" action="/urls/<%= id %>">
           <div class="form-group">
             <label for="longURLInput">New Long URL:</label>
-            <input type="text" class="form-control" id="longURLInput" name="longURL" value="<%= longURL %>">
+            <input type="text" class="form-control" id="longURLInput" name="longURL" value="<%= longURL.longURL %>">
+
           </div>
           <button type="submit" class="btn btn-primary">Update URL</button>
         </form>
