--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,7 +15,7 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL.longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
 
         <form method="POST" action="/urls/<%= id %>">
           <div class="form-group">
