--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,30 @@
-<h1>Login</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Login</title>
 
-<form action="/login" method="POST">
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+</head>
+<body>
+  <!-- Include header partial -->
+  <%- include('partials/_header') %>
 
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required>
+  <h1>Login</h1>
 
-  <button type="submit">Login</button>
-</form>
+  <form action="/login" method="POST">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" name="email" required>
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" class="form-control" id="password" name="password" required>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+</body>
+</html>
