--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,15 +13,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="#">Create New URL</a>
-          <% if (!user) { %> <!-- Change from username to user -->
-            <a class="nav-item nav-link" href="/login">Login</a>
-          <% } %>
+        <div class="navbar-nav ml-auto">
+          
+          
+          
           <% if (user) { %> <!-- Change from username to user -->
+            <a class="nav-item nav-link" href="/urls">My URLs</a>
             <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-            <span class="nav-item nav-link">Logged in as: <%= user.email %></span>
+            <span class="nav-item nav-link ml-auto">Logged in as: <%= user.email %></span>
             <form class="form-inline ml-auto" method="POST" action="/logout">
               <button class="btn btn-light my-2 my-sm-0" type="submit">Log Out</button>
             </form>
