--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,6 +24,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit URL</th>
+            <th scope="col">Delete URL</th>
           </tr>
         </thead>
         <tbody>
@@ -31,15 +33,15 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id].longURL %></td>
+              <td> 
+                <a class="btn btn-warning" href= '/urls/<%= id %> '> Edit </a> 
+              </td>
 
               <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
                 <input type="hidden" name="_method" value="DELETE">
                 <button type="submit" class="btn btn-danger">Delete</button>
               </form>
-            </td>
-            <td> 
-              <a href= '/urls/<%= id %> '> Edit </a> 
             </td>
             </tr>
           <% } %>
